# caltrain-bot

./: .dockerignore  .env.template  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
sql/: train_stop_timeline.sql
src/caltrain_bot/: __init__.py  config.py  question_analysis.py  schedule.py  telegram_bot.py  text2sql.py  time_utils.py
tests/unit/: test_schedule.py  test_telegram_bot.py  test_text2sql.py  test_time_utils.py
